2013-01-28  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Switch to XZ tarball compression.

	* configure.ac:
	  - Specify "dist-xz no-dist-gzip" options to AM_INIT_AUTOMAKE.
	  - Also add "-Wno-portability" to skip warnings on GNU make specific
	    features.

2013-01-28  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2012-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.2.0 ===

2012-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* README: Update project page URL.

2012-02-14  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* latex/examples/testdoc.tex: Fix a minor typo in Pali sample.

2012-02-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Move font encodings & ligkern stuffs back to font package,
	to allow font-specific ligkern rules.

	* +latex/ltharun.enc +latex/thailigs.enc +latex/thai-dummy.afm:
	  - Add enc & ligkern stuff from thailatex project.
	* latex/Makefile.am:
	  - Add new files to EXTRA_DIST.
	  - Install the enc file.
	* latex/texfont.mk.am:
	  - Add rules for creating symlinks to source files in builddir.
	  - Adjust rules to use the local source files.
	* configure.ac:
	  - Drop all checks for files in TEXMF, freeing it from thailatex
	    build-dep.
	  - Drop now-unneeded check for kpsewhich utility.

2012-02-11  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* arundina/ArundinaSerif.sfd:
	* arundina/ArundinaSerif-Bold.sfd:
	  - Add 'thai{dflt}' script/lang to all 'liga' tables, which may be
	    required by some rendering engines.
	  - Bump font version to 2.24.

2012-02-11  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* arundina/ArundinaSansMono.sfd:
	* arundina/ArundinaSansMono-Oblique.sfd:
	* arundina/ArundinaSansMono-Bold.sfd:
	* arundina/ArundinaSansMono-BoldOblique.sfd:
	  - Add 'thai{dflt}' script/lang to all 'liga' tables, which may be
	    required by some rendering engines.